tests/src/frontend/typechecking/invalid/whenparam_inherit7.sk
base class Parent<P> {
  overridable fun foo[P: Show](): void {
    void
  }
}

class Child<X, T>() extends Parent<T> {
  fun foo[X: Show, T: Show](): void {
    void
  }
}
